# MVC_Test_Orchestrator_V1.2

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FLOWCHART.md  INSTALL.md  LICENSE  README.md  USAGE.md  env.example  install.bat  install.sh  package-lock.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/prompts/: README.md  coder_agent_workflow.prompt.md  create_srs.prompt.md  extract_controller_architecture.prompt.md  extract_model_architecture.prompt.md  extract_requirements.prompt.md  extract_view_architecture.prompt.md  generate_controller_code.prompt.md  generate_model_code.prompt.md  generate_recommendations.prompt.md  generate_view_code.prompt.md
examples/: simple_usage.py
mvc-test-orchestrator/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
mvc-test-orchestrator/src/: extension.ts
mvc-test-orchestrator/src/test/: extension.test.ts
mvc-test-orchestrator/src/tree/: MVCTreeProvider.ts  architectureNode.ts  architectureTreeProvider.ts
mvc-test-orchestrator/src/utils/: architectureLoader.ts
src/: __init__.py
src/agents/: __init__.py  base_coder_agent.py  coder_agent.py  controller_coder_agent.py  model_coder_agent.py  mvc_pipeline_orchestrator.py  recommendation_fixer_agent.py  reviewer_agent.py  rules_agent.py  srs_writer_agent.py  view_coder_agent.py
src/agents/architect_agent/: base_architect_agent.py  (+5 more)
src/cli/: __init__.py  mvc_arch_cli.py
src/core/: config.py  llm_client.py
src/rag/: rag_pipeline.py
src/tests/: api_test.py  rag_test.py
src/utils/: add_violation_import.py
ui/: app.py
(+1 files in other folders)
