[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvc-test-orchestrator"
version = "1.2.0"
description = "AI-powered MVC architecture extraction and code generation system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MVC Test Orchestrator Team"}
]
keywords = ["mvc", "ai", "code-generation", "rag", "llm", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb==0.4.15",
    "sentence-transformers==2.5.1",
    "pdfplumber",
    "pypdfium2",
    "PyPDF2",
    "google-generativeai",
    "python-dotenv",
    "streamlit",
    "dataclasses-json",
    "orjson",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
mvc-orchestrator = "src.cli.mvc_arch_cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

